--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial=scale-1">
         <title>Интернет-магазин детской одежды</title>
         <link rel="stylesheet" href="assets/css/css/main_page.css">
         <link rel="stylesheet" href="assets/css/css_media/main_page_media.css">
